Effectively fixed the z-index error

--- a/app/Home.module.css
+++ b/app/Home.module.css
@@ -21,8 +21,7 @@
   top: 0;
   left: 0;
   mix-blend-mode: difference;
-  z-index: 1000;
-  
+  z-index: 90000;
 }
 
 .cursor__ball circle {
